Add new font-family. Change H1, header, img, H2, footer

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap-grid.css">
     <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f3571dbbed.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div style="background-image: url('https://inteng-storage.s3.amazonaws.com/images/uploads/sizes/desk_resize_md.jpg');">
+    <header style="background-image: url('https://inteng-storage.s3.amazonaws.com/images/uploads/sizes/desk_resize_md.jpg');">
 
         <nav class="navigation">
             <div class="container">
@@ -38,16 +39,13 @@
                 </div>
             </div>
         </nav>
+        <div class="header">
+            <h2>Welcone To Our Studiu!</h2>
+            <h1>IT'S NICE TO MEET YOU</h1>
+            <a href="#" class="btn">TELL ME MORE</a>
+        </div>
 
-        <header>
-            <div class="header">
-                <h2>Welcone To Our Studiu!</h2>
-                <h1>IT'S NICE TO MEET YOU</h1>
-                <a href="#" class="btn">TELL ME MORE</a>
-            </div>
-        </header>
-        
-    </div>
+    </header>
 
     <section>
         <div class="container">
@@ -164,10 +162,10 @@
         <div class="container">
             <div class="footer">
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-6">
                         <p>Copajsapd 2019 Ajidjdsn MSKDLM</p>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-6">
                         <ul>
                             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
